added focus mode DE translations, changed inlang settings

--- a/public/language/de/translation.json
+++ b/public/language/de/translation.json
@@ -4,13 +4,11 @@
   "navTab3": "Tu es jetzt",
   "navTab4": "Wer noch?",
   "navTab5": "Fokusmodus",
-
   "interfaceSection1h1": "Unsere Vorliebe für den Medienkonsum ist ein Meisterwerk der Evolution, das nahtlos mit dem Belohnungskreislauf unseres Gehirns verbunden ist.",
   "interfaceSection1content": "Die einfache Erwartung persönlicher Informationen löst einen Dopaminschub aus, der unsere Leidenschaft für neue und aufregende Dinge entfacht. Und genau das machen sich die großen Player der App-Branche zunutze, um uns zu fesseln und im Bann zu halten.",
   "magicMaybe": "Das Konzept 'The Magic Maybe' von Robert Sapolsky zeigt die magnetische Anziehungskraft unvollständiger Informationen, wie z. B. eine nur teilweise sichtbare Nachricht oder das 'Ping' einer eingehenden Benachrichtigung, das die Neugierde steigert und die impulsive Nutzung von Smartphones auf der Suche nach erwarteten Belohnungen fördert.",
   "focusMode": "Erfahre wie der Fokusmodus dir dabei helfen kann.",
   "oneSec": "Erfahre mehr über die App OneSec",
-
   "digitalReflectionH1": "Betrete die Digitale Detox Reflektions Zone",
   "digitalReflectionP1": "Ein Raum, in dem wir uns mit der Kunst des bewussten Lebens in einer digitalen Welt beschäftigen. Begebe dich auf eine achtsame Reise, bei der wir den Stecker ziehen und über das Geflecht unserer digitalen Erfahrungen nachdenken. Es ist eine Bewegung inmitten des Lärms der Bildschirmzeit, um Erkenntnisse auszutauschen und eine Atmosphäre der achtsamen Verbindung und des Gleichgewichts schaffen. Halte inne, denke nach, und lass dich von den Fragen inspirieren etwas an deinem Konsum zu verändern.",
   "digitalReflectionP2": "Hör niemals auf Fragen zu stellen!",
@@ -20,7 +18,6 @@
   "question4": "Welche Aktivitäten oder Hobbys hast du wiederentdeckt oder intensiver erlebt, seit du bewusster mit deiner Online-Zeit umgehst?",
   "question5": "Wie gehst du mit digitalen Ablenkungen um, wenn du versuchst, dich auf eine bestimmte Aufgabe zu konzentrieren?",
   "question6": "Hast du festgestellt, dass du produktiver oder weniger gestresst bist, wenn du bewusster mit deiner Online-Zeit umgehst?",
-
   "mediaCompetenceH1": "Entdecke die Spotlight-Theorie, um Medienmündigkeit zu erwerben",
   "mediaCompetenceContent1": "Wir sollten unseren Umgang mit Technologien und digitalen Medien überdenken und neu definieren. Medienmündigkeit (1) bedeutet, die Medien zu beherrschen und ihnen gleichzeitig ein Minimum an Kontrolle über uns zu überlassen",
   "mediaCompetenceContent2": "Um Medienmündigkeit zu kultivieren, ist es entscheidend, das Bewusstsein über unser Handeln zu schärfen, unsere innere und äußere Wahrnehmung zu schärfen und gute Fähigkeiten zum Selbstmanagement zu entwickeln. Dies erfordert Zeit, Geduld und gelegentliche ruhige Momente in unserer schnelllebigen Zeit.",
@@ -42,7 +39,6 @@
   "tab1Content2": "Die Leistungssteigerung durch aufmerksame Konzentration entsteht durch die Synchronisierung der neurologischen Hirnstromfrequenzen in verschiedenen Hirnarealen auf ein einheitliches Maß oder dieselbe Wellenlänge. Wenn diese Frequenzbereiche auf eine gemeinsame Wellenlänge kommen, wird vermehrt der Neurotransmitter Acetylcholin freigesetzt. Dies fördert die Kommunikation und den Informationsaustausch zwischen den Nervenbahnen. Während wir konzentriert sind oder in eine tiefere Denkphase während einer Aufgabe eintauchen, steigert dies unsere Fähigkeiten in Bereichen wie logischem Denken, Abstraktionsvermögen und Gedächtnis",
   "tab2Content": "Kreativität ist die Lebenskunst, mit der wir an Herausforderungen herangehen. Kreativ zu sein bedeutet sich fantasievolle Löungen für Probleme einfallen zu lassen, Antworten auf relevante Fragen im Alltag zu finden. Die Antworten, Lösungen und Ideen, die wir in mreativen Momenten des Nachdenkens/ in uns hin einspüren finden, geben uns ein Gefühö der Kontrolle, denn sie helfen uns das Leben zu meistern. kreative Lösungen stärken unser Selbstvertrauen, stimmen zuversichtlich und beruhigen unser Stressystem.",
   "tab3Content": "Klarheit ist für unsere kognitiven Prozesse von großer bedeutung. Klare Gedanken verbessern unserer Aufmerksamkeit, Konzentrationsfähigkeit, Wahrnehmung und Erinnerungen Durch Klarheit lernen wir mit dem beschleunigten Zeitalter umzugehen,um Technologien geschickt und zu unserem Vorteil nutzen zu können.",
-
   "intro-h2": "Fühlst du dich bei der Nutzung digitaler Medien überfordert, abgelenkt oder abgekoppelt?",
   "intro-p": "Wir auch. Das Wichtigste im Umgang mit den Medien ist, sich seiner Interaktion mit ihnen bewusst zu sein. Medienkompetenz ist im Umgang mit den digitalen Technologien extrem wichtig. Um die größte Wirkung von Medienkompetenz zu erzielen, müssen wir uns selbst erkennen und wahrnehmen, nach innen schauen und über gute Selbstmanagementfähigkeiten verfügen. Genau darum geht es auf dieser Website.",
   "consuming-media-h2": "Unsere Vorliebe für den Medienkonsum ist ein Meisterwerk der Evolution, das nahtlos mit dem ursprünglichen Belohnungskreislauf unseres Gehirns verbunden ist.",
@@ -56,7 +52,6 @@
   "hook-model-h2": "Das Hook-Modell erklärt, wie die App-Industrie uns süchtig macht.",
   "hook-model-p": "Das Hook-Modell erklärt einen Zyklus, den Smartphone-Apps anwenden, um Nutzer zu fesseln. Durch das Auslösen von Aktionen, die Bereitstellung variabler Belohnungen und die Förderung der Investition des Nutzers wird eine Schleife geschaffen, die eine tiefe Verbindung zwischen dem Nutzer und der App fördert.",
   "one-sec-h2": "Die App OneSec verändert das Spiel, indem es eine 10-Sekunden-Wartezeit einführt und dir die Gelegenheit gibt, innezuhalten und zweimal nachzudenken bevor du wieder in eine Endlosschleife gezogen wirst. Hier geht es um bewusste Entscheidungen und die Kontrolle über deine Zeit.",
-
   "actNowH2": "Auf geht's auf die Reise der Verbesserung",
   "actNowP1": "Tauche ein in verschiedene Methoden und Denkansätze, die nicht nur sofortige Erleichterung bieten, sondern auch langfristig deine Beziehung zu digitalen Medien positiv beeinflussen können. Finde Wege, um bewusster und achtsamer mit der digitalen Welt umzugehen und gleichzeitig das Hier und Jetzt zu schätzen.",
   "actNowP2": "Verbessere deine Beziehung zu digitalen Medien.",
@@ -68,34 +63,40 @@
   "pauses": "Pausen",
   "mindfulness": "Achtsamkeit",
   "stimuli": "Störreize",
-
   "focus": "Fokus",
   "concentration": "Konzentration",
   "light": "Streulicht",
   "self-management": "Selbstmanagement",
   "attention": "Aufmerksamkeit",
   "clearness": "Klarheit",
-
   "actNowChapter": "Tu es jetzt",
   "oneSecChapter": "OneSec",
   "oneSecChapterText": "One Sec fungiert als Starthilfe um deinen Weg zu einer medienmündigen Person einzuschlagen.",
-
   "onseSecH1": "Entdecke die App OneSec für bewusste Pausen vor deiner Appbenutzung",
   "onseSecP1": "One Sec steigert das Bewusstsein und die absichtliche Nutzung durch die Einführung einer Verzögerung von 10 Sekunden, wodurch die sofortige Befriedigung, die mit Social-Media-Apps verbunden ist, unterbrochen wird.",
   "oneSecCta": "Entdecke OneSec heute",
-
   "focusModeChapter": "Fokus Modus",
   "focusModeChapterText": "Der Fokusmodus ist eine Methode, die dir hilft, dich auf eine Aufgabe zu konzentrieren und Ablenkungen zu minimieren. Er hilft dir, deine Aufmerksamkeit zu steuern und zu fokussieren.",
-
   "focusModeH1": "Entdecke den Fokus Modus für ungestörte Produktivität und Kontrolle",
   "focusModeP1": "Dein persönliches Werkzeug für ungestörte Produktivität und wohltuende Auszeiten auf dem iPhone! Egal, ob du konzentriert arbeiten, dich entspannen oder einfach den digitalen Trubel ausblenden möchtest – der Fokus-Modus bietet dir die Kontrolle. Hier erfährst du, wie du ihn direkt im Kontrollzentrum aktivierst oder clever planst, damit er sich automatisch zu den Zeiten einschaltet, die für dich am besten passen.",
   "focusModeCta": "Entdecke den Fokus Modus",
-
   "actOptionsChapter": "Handlungsoptionen",
   "actOptionsChapterText": "Ob kurz– oder mittelfristig, hier findest du Handlungstipps um deine Medienmündigkeit zu steigern.",
-
   "focusModeH1_1": "Entdecke den Fokus Modus für ungestörte Produktivität und Kontrolle",
   "focusModep1": "Dein persönliches Werkzeug für ungestörte Produktivität und wohltuende Auszeiten auf dem iPhone! Egal, ob du konzentriert arbeiten, dich entspannen oder einfach den digitalen Trubel ausblenden möchtest – der Fokus-Modus bietet dir die Kontrolle. Hier erfährst du, wie du ihn direkt im Kontrollzentrum aktivierst oder clever planst, damit er sich automatisch zu den Zeiten einschaltet, die für dich am besten passen.",
-
-  "focusModeCta1": "Im Handumdrehen eingerichtet"
+  "focusModeCta1": "Im Handumdrehen eingerichtet",
+  "step-1": "Schritt 1",
+  "instruction-01": "Bestehenden Fokus Modus aktivieren",
+  "create-focus-text": "Wenn du dich auf eine Aktivität konzentrieren möchtest, die keiner\n            der bereitgestellten Fokus-Optionen entspricht, kannst du einen\n            eigenen Fokus erstellen. <br />\n            <br />\n            <br />\n            <br />\n            1 - Wähle „Einstellungen“ & dann „Fokus“.\n            <br />\n            <br />\n            2 - Tippe auf die Taste „Hinzufügen“ oben rechts und anschließend\n            auf „Eigener“.\n            <br />\n            <br />\n            3 - Gib einen Namen für deinen Fokus ein und tippe auf den\n            Zeilenschalter.\n            <br />\n            <br />\n            4 - Wähle eine Farbe und ein passendes Symbol aus und tippe auf\n            „Weiter“.\n            <br />\n            <br />5 - Tippe auf „Fokus anpassen“ und lege die Optionen für\n            deinen eigenen Fokus fest.",
+  "insturct-text1": "Öffne das Kontrollzentrum",
+  "instruct-text2": " , tippe auf „Fokus“ und anschließend auf den Fokus, der aktiviert\n            werden soll (beispielsweise „Nicht stören“).",
+  "instruct-text3": "Hinweis: Ist bereits ein anderer Fokus aktiv, wird dieser\n            deaktiviert, wenn du auf den neuen Fokus tippst.",
+  "step-2": "Schritt 2",
+  "instruction-02": "Neuen Fokus Modus erstellen",
+  "instruct2-text1": " Wenn du dich auf eine Aktivität konzentrieren möchtest, die keiner\n            der bereitgestellten Fokus-Optionen entspricht, kannst du einen\n            eigenen Fokus erstellen.",
+  "instruct2-text2": "1 - Wähle „Einstellungen“ & dann „Fokus“.",
+  "instruct2-text3": "2 - Tippe auf die Taste „Hinzufügen“ oben rechts und anschließend\n            auf „Eigener“.",
+  "instruct2-text4": "3 - Gib einen Namen für deinen Fokus ein und tippe auf den\n            Zeilenschalter.",
+  "instruct2-text5": "4 - Wähle eine Farbe und ein passendes Symbol aus und tippe auf\n            „Weiter“.",
+  "instruct2-text6": "5 - Tippe auf „Fokus anpassen“ und lege die Optionen für\n            deinen eigenen Fokus fest."
 }
