inlang: update translations

--- a/public/language/de/translation.json
+++ b/public/language/de/translation.json
@@ -76,7 +76,7 @@
   "onseSecP1": "One Sec steigert das Bewusstsein und die absichtliche Nutzung durch die Einführung einer Verzögerung von 10 Sekunden, wodurch die sofortige Befriedigung, die mit Social-Media-Apps verbunden ist, unterbrochen wird.",
   "oneSecCta": "Entdecke OneSec heute",
   "focusModeChapter": "Fokus Modus",
-  "focusModeChapterText": "Der Fokusmodus ist eine Methode, die dir hilft, dich auf eine Aufgabe zu konzentrieren und Ablenkungen zu minimieren. Er hilft dir, deine Aufmerksamkeit zu steuern und zu fokussieren.",
+  "focusModeChapterText": "Der Fokus Modus ist eine Methode, die dir hilft, dich auf eine Aufgabe zu konzentrieren und Ablenkungen zu minimieren. Er hilft dir, deine Aufmerksamkeit zu steuern und zu fokussieren.",
   "focusModeH1": "Entdecke den Fokus Modus für ungestörte Produktivität und Kontrolle",
   "focusModeP1": "Dein persönliches Werkzeug für ungestörte Produktivität und wohltuende Auszeiten auf dem iPhone! Egal, ob du konzentriert arbeiten, dich entspannen oder einfach den digitalen Trubel ausblenden möchtest – der Fokus-Modus bietet dir die Kontrolle. Hier erfährst du, wie du ihn direkt im Kontrollzentrum aktivierst oder clever planst, damit er sich automatisch zu den Zeiten einschaltet, die für dich am besten passen.",
   "focusModeCta": "Entdecke den Fokus Modus",
@@ -87,16 +87,17 @@
   "focusModeCta1": "Im Handumdrehen eingerichtet",
   "step-1": "Schritt 1",
   "instruction-01": "Bestehenden Fokus Modus aktivieren",
-  "create-focus-text": "Wenn du dich auf eine Aktivität konzentrieren möchtest, die keiner\n            der bereitgestellten Fokus-Optionen entspricht, kannst du einen\n            eigenen Fokus erstellen. <br />\n            <br />\n            <br />\n            <br />\n            1 - Wähle „Einstellungen“ & dann „Fokus“.\n            <br />\n            <br />\n            2 - Tippe auf die Taste „Hinzufügen“ oben rechts und anschließend\n            auf „Eigener“.\n            <br />\n            <br />\n            3 - Gib einen Namen für deinen Fokus ein und tippe auf den\n            Zeilenschalter.\n            <br />\n            <br />\n            4 - Wähle eine Farbe und ein passendes Symbol aus und tippe auf\n            „Weiter“.\n            <br />\n            <br />5 - Tippe auf „Fokus anpassen“ und lege die Optionen für\n            deinen eigenen Fokus fest.",
+  "create-focus-text": "removed",
   "insturct-text1": "Öffne das Kontrollzentrum",
-  "instruct-text2": " , tippe auf „Fokus“ und anschließend auf den Fokus, der aktiviert\n            werden soll (beispielsweise „Nicht stören“).",
-  "instruct-text3": "Hinweis: Ist bereits ein anderer Fokus aktiv, wird dieser\n            deaktiviert, wenn du auf den neuen Fokus tippst.",
+  "instruct-text2": " , tippe auf „Fokus“ und anschließend auf den Fokus, der aktiviert werden soll (beispielsweise „Nicht stören“).",
+  "instruct-text3": "Hinweis: Ist bereits ein anderer Fokus aktiv, wird dieser deaktiviert, wenn du auf den neuen Fokus tippst.",
   "step-2": "Schritt 2",
   "instruction-02": "Neuen Fokus Modus erstellen",
-  "instruct2-text1": " Wenn du dich auf eine Aktivität konzentrieren möchtest, die keiner\n            der bereitgestellten Fokus-Optionen entspricht, kannst du einen\n            eigenen Fokus erstellen.",
+  "instruct2-text1": "Wenn du dich auf eine Aktivität konzentrieren möchtest, die keiner der bereitgestellten Fokus-Optionen entspricht, kannst du einen eigenen Fokus erstellen.",
   "instruct2-text2": "1 - Wähle „Einstellungen“ & dann „Fokus“.",
-  "instruct2-text3": "2 - Tippe auf die Taste „Hinzufügen“ oben rechts und anschließend\n            auf „Eigener“.",
-  "instruct2-text4": "3 - Gib einen Namen für deinen Fokus ein und tippe auf den\n            Zeilenschalter.",
-  "instruct2-text5": "4 - Wähle eine Farbe und ein passendes Symbol aus und tippe auf\n            „Weiter“.",
-  "instruct2-text6": "5 - Tippe auf „Fokus anpassen“ und lege die Optionen für\n            deinen eigenen Fokus fest."
+  "instruct2-text3": "2 - Tippe auf die Taste „Hinzufügen“ oben rechts und anschließend auf „Eigener“.",
+  "instruct2-text4": "3 - Gib einen Namen für deinen Fokus ein und tippe auf den Zeilenschalter.",
+  "instruct2-text5": "4 - Wähle eine Farbe und ein passendes Symbol aus und tippe auf „Weiter“.",
+  "instruct2-text6": "5 - Tippe auf „Fokus anpassen“ und lege die Optionen für deinen eigenen Fokus fest.",
+  "imformation-realm-p": "Das Hook-Modell erklärt einen Zyklus, den Smartphone-Apps anwenden, um Nutzer zu fesseln. Durch das Auslösen von Aktionen, die Bereitstellung variabler Belohnungen und die Förderung der Investition des Nutzers wird eine Schleife geschaffen, die eine tiefe Verbindung zwischen dem Nutzer und der App fördert."
 }
