--- a/public/language/en/translation.json
+++ b/public/language/en/translation.json
@@ -43,10 +43,11 @@
   "intro-p": "We too. The most important thing when dealing with media is to be aware of your interaction with it. Media literacy is extremely important when dealing with digital technologies. In order to achieve the greatest effect of media literacy, we need to recognize and be aware of ourselves, look inwards and have good self-management skills. That’s what this website is about.",
   "consuming-media-h2": "Our love for consuming media is an evolution masterpiece, seamlessly connected with the primal reward circuit of our brains.",
   "consuming-media-p": "The simple expectation of personal information triggers a dopamine rush that sparks our passion for new and exciting things. And precisely this is what all the big players in the app industry capitalize on, keeping us hooked and engaged in the game.",
-  "information-realm-p1": "1. Trigger: Externe und interne Anreize und Auslöser, die den User zur Nutzung deines Produktes führen.",
-  "information-realm-p2": "2. Action: Die konkrete Aktion des Nutzers in Erwartung einer unmittelbaren Belohnung bzw. Mehrwerts.",
-  "information-realm-p3": "3.Variable Reward: Belohnung des Nutzers durch die Bereitstellung eines variablen Mehrwerts.",
-  "information-realm-p4": " 4. Investment: Der Nutzer investiert daraufhin Zeit, Daten, Aufwand oder seine soziale Reputation, um bei wiederholter Nutzung eine bessere Erfahrung mit deinem Produkt zu machen.",
+  "information-realm-p": "The Hook Model explains a cycle employed by smartphone apps to captivate users. By triggering actions, delivering variable rewards, and encouraging user investment, a loop is created, fostering a deep connection between the user and the app.",
+  "information-realm-p1": "1. Triggers: External and internal incentives and triggers that lead the user to use your product.",
+  "information-realm-p2": "2. Action: The concrete action of the user in expectation of an immediate reward or added value.",
+  "information-realm-p3": "3. Variable reward: Rewarding the user by providing variable added value.",
+  "information-realm-p4": "4. Investment: The user then invests time, data, effort or their social reputation in order to have a better experience with your product when using it repeatedly.",
   "information-realm-h2": "The Hook Model explains how the app industry keeps us hooked.",
   "hook-model-h2": "Hook Model explains how the app industry keeps us hooked.",
   "hook-model-p": "The Hook Model explains a cycle employed by smartphone apps to captivate users. By triggering actions, delivering variable rewards, and encouraging user investment, a loop is created, fostering a deep connection between the user and the app.",
@@ -68,5 +69,35 @@
   "self-management": "Self-management",
   "attention": "Attention",
   "clearness": "Clearness",
+  "actNowChapter": "Act now",
+  "oneSecChapter": "OneSec",
+  "oneSecChapterText": "One Sec helps you get started on your way to becoming a media-savvy person.",
+  "onseSecH1": "Discover the OneSec app for conscious breaks before using your app",
+  "onseSecP1": "One Sec increases awareness and intentional use by introducing a 10-second delay, disrupting the instant gratification associated with social media apps.",
+  "oneSecCta": "Discover OneSec today",
+  "focusModeChapter": "Focus mode",
+  "focusModeChapterText": "Focus mode is a method that helps you to concentrate on a task and minimize distractions. It helps you to control and focus your attention.",
+  "focusModeH1": "Discover focus mode for uninterrupted productivity and control",
+  "focusModeP1": "Your personal tool for undisturbed productivity and soothing downtime on the iPhone! Whether you want to concentrate on your work, relax or simply tune out the digital hustle and bustle - Focus mode puts you in control. Here you can find out how to activate it directly in the Control Center or cleverly schedule it to switch on automatically at the times that suit you best.",
+  "focusModeCta": "Discover the focus mode",
+  "actOptionsChapter": "Courses of action",
+  "actOptionsChapterText": "Whether in the short or medium term, here you will find tips on how to increase your media literacy.",
+  "focusModeH1_1": "Discover focus mode for uninterrupted productivity and control",
+  "focusModep1": "Your personal tool for undisturbed productivity and soothing downtime on the iPhone! Whether you want to concentrate on your work, relax or simply tune out the digital hustle and bustle - Focus mode puts you in control. Here you can find out how to activate it directly in the Control Center or cleverly schedule it to switch on automatically at the times that suit you best.",
+  "focusModeCta1": "Set up in no time",
+  "step-1": "Step 1",
+  "instruction-01": "Activate existing focus mode",
+  "create-focus-text": "remove",
+  "insturct-text1": "Open the control center",
+  "instruct-text2": "tap on \"Focus\" and then on the focus that you want to activate to be activated (for example \"Do not disturb\").",
+  "instruct-text3": "Note: If another focus is already active, it will be deactivated when you tap on the new focus.",
+  "step-2": "Step 2",
+  "instruction-02": "Create new focus mode",
+  "instruct2-text1": "If you want to focus on an activity that does not match any of theof the focus options provided, you can create your own focus.create your own focus.",
+  "instruct2-text2": "1 - Select \"Settings\" & then \"Focus\".",
+  "instruct2-text3": "2 - Tap on the \"Add\" button at the top right and then on \"own\".",
+  "instruct2-text4": "3 - Enter a name for your focus and tap the line switch.",
+  "instruct2-text5": "4 - Select a color and a matching symbol and tap \"Next\".",
+  "instruct2-text6": "5 - Tap on \"Customize focus\" and set the options for your own focus.",
   "imformation-realm-p": "The Hook Model explains a cycle employed by smartphone apps to captivate users. By triggering actions, delivering variable rewards, and encouraging user investment, a loop is created, fostering a deep connection between the user and the app."
 }
