added all translations

--- a/public/language/en/translation.json
+++ b/public/language/en/translation.json
@@ -99,5 +99,7 @@
   "instruct2-text4": "3 - Enter a name for your focus and tap the line switch.",
   "instruct2-text5": "4 - Select a color and a matching symbol and tap \"Next\".",
   "instruct2-text6": "5 - Tap on \"Customize focus\" and set the options for your own focus.",
-  "imformation-realm-p": "The Hook Model explains a cycle employed by smartphone apps to captivate users. By triggering actions, delivering variable rewards, and encouraging user investment, a loop is created, fostering a deep connection between the user and the app."
+  "imformation-realm-p": "The Hook Model explains a cycle employed by smartphone apps to captivate users. By triggering actions, delivering variable rewards, and encouraging user investment, a loop is created, fostering a deep connection between the user and the app.",
+  "share-link": "Share link",
+  "digital-reflection-title": "Digital reflection"
 }
