inlang: update translations

--- a/public/language/de/translation.json
+++ b/public/language/de/translation.json
@@ -162,7 +162,7 @@
   "action-09": "↘ Innehalten und Realitätscheck Sind mir die Informationen nun\n            wirklich wichtig?",
   "stoerreizeEmo": "Störreize mit emotionalen Bezug",
   "stoerreizeEmo-text": "Die ausgeprägtesten Störungen sind oft dien, zu denen wir einen\n            emotionalen Bezug haben oder die persönlich an uns gerichtet sind.\n            Wenn wir uns einmal über eine laut telefonierende Person in der Bahn\n            geärgert haben, fällt es uns ab diesem Moment noch schwerer, den\n            Störreiz zu ignorieren.",
-  "action-10": "↘ Ablenkende Reize reduzierenm ist die effektivste Methode,\n            Störungen zu unterdrücken. Gutes Selbstmanagement umfasst, die\n            Störreize um sich herum zu minimieren.",
+  "action-10": "↘ Ablenkende Reize reduzieren ist die effektivste Methode,\n            Störungen zu unterdrücken. Gutes Selbstmanagement umfasst, die\n            Störreize um sich herum zu minimieren.",
   "action-11": "↘ Noise-Cancelling-Kopfhörer oder Ohropads, sind eine gute\n            Lösung, für den Öffentlichen Raum.",
   "Krativität-text": "Kreativität ist die Lebenskunst, mit der wir an Herausforderungen\n            herangehen. Kreativ zu sein bedeutet, sich fantasievolle Lösungen\n            für Probleme einfallen zu lassen und Antworten auf relevante Fragen\n            im Alltag zu finden. Sie geben uns das Gefühl der Kontrolle, denn\n            sie helfen uns das Leben zu meistern. Kreativität stärkt unser\n            Selbstvertrauen, stimmt zuversichtlich und beruhigt unser\n            Stresssystem.",
   "dauerkonsum": "Medialer Dauerkonsum",
@@ -201,7 +201,7 @@
   "i6": "E-Mail: joschua.rothenbacher@hfg.design",
   "i7": "Verantwortlich für den Inhalt nach § 55",
   "i8": "Abs. 2 RStV: Joschua Rothenbacher Adresse wie oben.",
-  "i9": "Schriftart Diese Webseite",
+  "i9": "Schriftart dieser Webseite",
   "i10": " verwendet die Schriftart \"Inter\", welche von Rasmus Andersson entworfen\n        wurde und unter der SIL Open Font License, Version 1.1, lizenziert ist.\n        Wir danken den Entwicklern für die Bereitstellung dieser hochwertigen\n        Schriftart.",
   "i11": "Haftungsausschluss (Disclaimer):",
   "i12": "Haftung für Inhalte",
