font-size fixes

--- a/public/language/en/translation.json
+++ b/public/language/en/translation.json
@@ -103,7 +103,7 @@
   "share-link": "Share link",
   "digital-reflection-title": "Digital reflection",
   "m-title": "Media literacy",
-  "m-hero-text": "A person is media literate if they have as much control over the media as possible andbe controlled by them",
+  "m-hero-text": "Media literate is someone who masters media as much as possible and allows themselves to be dominated by it as little as possible.",
   "m-hero-text1": "In order to develop media literacy, it is important to develop an awarenessfor our actions, to sharpen our internal and externalperception and to develop good self-management skills.self-management. This requires time, patienceand occasional quiet moments in an age of acceleration.acceleration.",
   "m-hero-text2": "The friction generated in the landing page before trigger and action area good start to a healthy digital-analog balance. OneSec and theFocus Mode use techniques from media-mature behaviors,to make the transition to media maturity easier. Frictioncan be self-generated + established with media-mature behaviors,so that you can benefit from the many advantages of the digital world.",
   "chapter-worddef": "Definition of terms",
